에러 + 경고 수정 (완료)